:wrench: Chore: Swagger, h2 권한 설정
<body>
- swagger 접근 권한 해제
- h2-console 접근 권한 해제
- test api 접근 권한 해제

<footer>
- 관련: #10